--- a/netlify.toml
+++ b/netlify.toml
@@ -1,1 +1,10 @@
-[build]\n  publish = '.'\n[[headers]]\n  for = '/*'\n  [headers.values]\n  X-Frame-Options = 'SAMEORIGIN'\n  X-Content-Type-Options = 'nosniff'\n  Referrer-Policy = 'strict-origin-when-cross-origin'\n  Permissions-Policy = 'camera=(), microphone=(), geolocation=()'
+[build]
+  publish = "."
+
+[[headers]]
+  for = "/*"
+  [headers.values]
+  X-Frame-Options = "SAMEORIGIN"
+  X-Content-Type-Options = "nosniff"
+  Referrer-Policy = "strict-origin-when-cross-origin"
+  Permissions-Policy = "camera=(), microphone=(), geolocation=()"
